Fix for bug 124485 (Long lists of folders/bookmarks after up/down arrow not reachable)

Modified GetOriginToViewOffset() so that it returns an offset of (0,0) when the
contained view returned by GetView() is not a descendant of the frame's parent
view, as is the case with scrolling popup menus.

r=kmcclusk@netscape.com  sr=roc+moz@cs.cmu.edu  a=roc+moz@cs.cmu.edu